# life-engine

./: README.md  game_of_life.py  pyproject.toml
